实现菜单管理

--- a/src/Admin/H.LowCode.Admin/Layout/MyAppLayout.razor
+++ b/src/Admin/H.LowCode.Admin/Layout/MyAppLayout.razor
@@ -70,7 +70,7 @@
             new MenuDataItem
             {
                 Path = $"/myapp/menumanager/{appId}",
-                Name = "导航管理",
+                Name = "菜单管理",
                 Icon = "menu",
                 Key = "menu"
             },
