--- a/src/Admin/H.LowCode.Admin/Pages/Index.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Index.razor
@@ -56,7 +56,13 @@
                 <GridCol Span="24">
                     <p>页面设计示例(快捷入口)：</p>
                     <p>
-                        <a href="/designer/testapp/newpage" target="_blank">页面设计器</a>
+                        <a href="/designer/testapp/newpage" target="_blank">页面设计器 (新增自定义)</a>
+                    </p>
+                    <p>
+                        <a href="/designer/testapp/newpage?pt=1" target="_blank">页面设计器 (新增表单)</a>
+                    </p>
+                    <p>
+                        <a href="/designer/testapp/newpage?pt=2" target="_blank">页面设计器 (新增列表)</a>
                     </p>
                     <p>
                         <a href="/designer/testapp/88888888-8888-8888-8888-888888888888" target="_blank">页面设计器 (已有元数据)</a>
