--- a/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
@@ -16,7 +16,7 @@
     @if(_appSchemas != null){
         @foreach (var app in _appSchemas)
         {
-            <Card Style="float:left; width:300px; margin:5px;" Bordered Cover="coverTemplate">
+            <Card Style="float:left; width:300px; margin:5px;" Bordered>
                 <ChildContent>
                     <CardMeta AvatarTemplate="@avatarTemplate" Title="@app.Name" Description="@app.Description" />
                 </ChildContent>
@@ -48,8 +48,7 @@
     private bool _visible = false;
 
     RenderFragment avatarTemplate = @<Avatar src="https://zos.alipayobjects.com/rmsportal/ODTLcjxAfvqbxHnVXCYX.png"></Avatar>;
-    RenderFragment coverTemplate = @<img alt="example" src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png" />;
-
+    
     protected override void OnInitialized()
     {
         base.OnInitialized();
