--- a/src/Admin/H.LowCode.Admin/Pages/Apps/AppCreate.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Apps/AppCreate.razor
@@ -21,7 +21,7 @@
         <FormItem Label="应用名称" Rules=@(new FormValidationRule[]{ new FormValidationRule{ Required = true } })>
             <Input @bind-Value="@context.Name" />
         </FormItem>
-        <FormItem Label="应用描述" Rules=@(new FormValidationRule[]{ new FormValidationRule{ Required = true } })>
+        <FormItem Label="应用描述">
             <TextArea @bind-Value="@context.Description" />
         </FormItem>
         <FormItem Label="支持平台">
