--- a/src/Host/H.LowCode.Admin.Host/Components/App.razor
+++ b/src/Host/H.LowCode.Admin.Host/Components/App.razor
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" sizes="512x512" href="logo.png" />
     <!-- H.LowCode.Admin.Host -->
     <link rel="stylesheet" href="H.LowCode.Admin.Host.styles.css" />
+    <link rel="stylesheet" href="admin.css" />
 
     <!-- Ant Design Pro Blazor (antblazor库会动态引入js,css资源,此处可无需引入.为避免在按需动态引入时样式渲染闪烁问题,此处提前引入) -->
     <link href="_content/AntDesign/css/ant-design-blazor.css" rel="stylesheet" />
