--- a/src/DesignEngine/H.LowCode.DesignEngine.Admin/_Imports.razor
+++ b/src/DesignEngine/H.LowCode.DesignEngine.Admin/_Imports.razor
@@ -13,4 +13,5 @@
 @using H.LowCode.DesignEngine.Admin.Layout
 @using H.LowCode.DesignEngine.Model
 @using H.LowCode.MetaSchema
+@using H.LowCode.DesignEngine.Admin.Pages.DataSource
 @using H.Util.Blazor
