- 新建应用bug更新 antdesign 版本修复

--- a/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/MyApps.razor
@@ -18,7 +18,7 @@
         {
             <Card Class="myapps" Style="float:left; width:300px; margin:5px;" Bordered>
                 <ChildContent>
-                    <CardMeta AvatarTemplate="@avatarTemplate" Title="@app.Name" Description="@app.Description" />
+                    <CardMeta AvatarTemplate="@avatarTemplate" Title="@app.Name" Description="@app.Description" Style="height: 60px;" />
                 </ChildContent>
                 <ActionTemplate>
                     <CardAction>
