- 明确指定页面 layout

--- a/src/Admin/H.LowCode.Admin/Pages/Apps/AppCreate.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Apps/AppCreate.razor
@@ -1,4 +1,6 @@
-﻿@inject IHttpClientFactory HttpClientFactory
+﻿@layout ProAdminLayout
+
+@inject IHttpClientFactory HttpClientFactory
 @inject NavigationManager NavigationManager
 @inject IMessageService _message
 
