--- a/src/Admin/H.LowCode.Admin/Pages/Markets/AppPopularTemplates.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/Markets/AppPopularTemplates.razor
@@ -1,4 +1,6 @@
-﻿<Card Title="图书管理系统" Style="float:left; width:250px; margin:5px;">
+﻿@layout ProAdminLayout
+
+<Card Title="图书管理系统" Style="float:left; width:250px; margin:5px;">
     <Extra>
         <a href="javascript:void(0)">使用</a>
     </Extra>
