--- a/src/Admin/H.LowCode.Admin/Pages/SolutionCenter.razor
+++ b/src/Admin/H.LowCode.Admin/Pages/SolutionCenter.razor
@@ -1,5 +1,7 @@
 ﻿@page "/admin/solutioncenter"
 
+@layout ProAdminLayout
+
 <Tabs DefaultActiveKey="tab_template_app" Class="center-div" Centered Animated>
     <TabPane Tab="行业解决方案" Key="tab_solution_industry">
         <Card Title="智慧医院" Style="float:left; width:300px; margin:5px;">
